          skin is specified. This allows developers to create skins that do
          not include the default layer.

      - Replaced copypastemove.rename with adapters to IContainerItemRenamer.
        Instead of `rename(container, oldName, newName)`, one should use
        `IContainerItemRenamer(container).renameItem(oldName, newName)`.

    Bug Fixes

      - When I converted layers and skins to interfaces, I got the layer part
        wrong and made layer interfaces extend `ILayer`. But `ILayer` is an
        `IInterface`, *not* an Interface. Layers should not extend but provide
        `ILayer`.

      - Fixed most formatting characters for i18n's datetime formatter. Only
        timezones are left.

      - Partially fixed issue #306 (Problem 2: Browser page and view directive
        cannot register serveral pages views within different layers for
        the same for, menu and title attributes.)

      - Fixed issue #353 (applySkin does not work in functional doctests).

      - Fixed issue #293 (SequenceWidget and CustomWidgetFactory).

      - TextWidgets set the value attribute to "value" when the field
        has a missing value set and was not required and when there
        was no input.

      - Fixed a bug in the adapter registry that would prevent `dict`-derived
        utilites from being retrieved correctly.

      - Resolved issue 304 (Slash involve dbname). We require now that all
        values in a DSN are properly URL-encoded, so that all values can
        contain any special character, except for the hostname and the port.

      - Fixed intid utility: Registration and unregistration of
        local utitlity services, context aware registration of nested
        components that may provide their own intids utiltities.

      - Fixed browser:defaultView metaconfigure: for_ passes a GlobalObject
        and not a Token of GlobalObjects.

      - Changed negotiator import with "INegotiator" utility lookup in