@@ -416,6 +416,10 @@ Zope Changes
         Instead of `rename(container, oldName, newName)`, one should use
         `IContainerItemRenamer(container).renameItem(oldName, newName)`.
 
+      - Deprecated _configureCopy in zope.app.copypastemove.ObjectCopier. To
+        configure a recently copied object, suscribe to IObjectCopiedEvent for
+        the type of object you're interested in configuring.
+
     Bug Fixes
 
       - When I converted layers and skins to interfaces, I got the layer part
